--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,6 +1,11 @@
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
 
+# Add to build for exec:java in CI/CD
+# - name: Maven exec:java
+#       run: mvn -ntp exec:java 
+#       continue-on-error: true
+
 name: Java CI with Maven
 
 on:
@@ -30,9 +35,6 @@ jobs:
       continue-on-error: true
     - name: Checkstyle
       run: mvn -ntp test -Dcheckstyle.violationSeverity=warning
-      continue-on-error: true
-    - name: Maven exec:java
-      run: mvn -ntp exec:java 
       continue-on-error: true
     - name: Report mutation coverage
       run: |
