Udate ignore files and versions in pom

--- a/pom.xml
+++ b/pom.xml
@@ -13,20 +13,20 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<maven.compiler.source>11</maven.compiler.source>
 		<maven.compiler.target>11</maven.compiler.target>
-		<junit.jupiter.version>5.6.2</junit.jupiter.version>
-		<maven.compiler.version>3.8.1</maven.compiler.version>
-		<maven.site.version>3.9.1</maven.site.version>
-		<checkstyle.version>3.1.1</checkstyle.version>
-		<surefire.version>3.0.0-M5</surefire.version>
-		<javadoc.version>3.2.0</javadoc.version>
-		<maven.reports.version>3.1.0</maven.reports.version>
+		<junit.jupiter.version>5.9.1</junit.jupiter.version>
+		<maven.compiler.version>3.10.1</maven.compiler.version>
+		<maven.site.version>3.12.1</maven.site.version>
+		<checkstyle.version>3.2.0</checkstyle.version>
+		<surefire.version>3.0.0-M7</surefire.version>
+		<javadoc.version>3.4.1</javadoc.version>
+		<maven.reports.version>3.4.1</maven.reports.version>
 		<jdt.core.version>3.7.1</jdt.core.version>
-		<log4j.slf4j.version>2.11.1</log4j.slf4j.version>
-		<exec.maven.version>3.0.0</exec.maven.version>
-		<junit.standalone.version>1.7.0-M1</junit.standalone.version>
-		<mockito.version>3.5.10</mockito.version>
-		<jacoco.version>0.8.6</jacoco.version>
-		<pitest.version>1.5.2</pitest.version>
+		<log4j.slf4j.version>2.19.0</log4j.slf4j.version>
+		<exec.maven.version>3.1.0</exec.maven.version>
+		<junit.standalone.version>1.9.1</junit.standalone.version>
+		<mockito.version>4.8.0</mockito.version>
+		<jacoco.version>0.8.8</jacoco.version>
+		<pitest.version>1.9.8</pitest.version>
 	</properties>
 
 	<dependencies>
@@ -107,6 +107,7 @@
 				</configuration>
 				<executions>
 					<execution>
+						<?m2e execute onConfiguration,onIncremental?>
 						<id>validate</id>
 						<phase>validate</phase>
 						<goals>
