--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,42 +1,47 @@
 # This workflow will build a Java project with Maven
 # For more information see: https://help.github.com/actions/language-and-framework-guides/building-and-testing-java-with-maven
-
-# Add to build for exec:java in CI/CD
-# - name: Maven exec:java
-#       run: mvn -ntp exec:java 
-#       continue-on-error: true
-
 name: Java CI with Maven
 
 on:
   push:
     branches: [ main ]
-  pull_request: 
+  pull_request:
+
 jobs:
-  build:
+  build-and-test:
+    name: Grade for submission
     runs-on: ubuntu-latest
     steps:
-    - name: Checkout repository and submodules
-      uses: actions/checkout@v2
-      with:
-        submodules: recursive
-        token: ${{ secrets.ACCESS_TOKEN }}
-    - uses: actions/checkout@v2
+
     - name: Set up JDK 11
-      uses: actions/setup-java@v2
+      uses: actions/setup-java@v3
       with:
         java-version: '11'
         distribution: 'adopt'
-    - name: mvn install project-utils
+    
+    - name: Checkout repository and submodules
+      uses: actions/checkout@v3
+      with:
+        submodules: recursive
+        token: ${{ secrets.ACCESS_TOKEN }}
+
+    - name: Install project-utils
       working-directory: ./project-utils
       run: mvn -ntp install
-    - name: Maven build and test assignment
-      run: mvn -ntp verify 
+
+    - name: Verify
+      run: mvn -ntp verify
+
+    - name: Checkstyle check
+      run: mvn -ntp checkstyle:check -Dcheckstyle.violationSeverity=warning
+
+    - name: Output type proofs
+      if: always()
+      run: mvn -ntp exec:java 
       continue-on-error: true
-    - name: Checkstyle
-      run: mvn -ntp test -Dcheckstyle.violationSeverity=warning
-      continue-on-error: true
+
     - name: Report mutation coverage
+      if: always()
       run: |
         mvn -ntp -DoutputFormats=CSV test org.pitest:pitest-maven:mutationCoverage
         echo "Mutations not killed:"
