--- a/pom.xml
+++ b/pom.xml
@@ -27,6 +27,7 @@
 		<mockito.version>4.8.0</mockito.version>
 		<jacoco.version>0.8.8</jacoco.version>
 		<pitest.version>1.9.8</pitest.version>
+		<pitest.junit5.plugin.version>1.1.0</pitest.junit5.plugin.version>
 	</properties>
 
 	<dependencies>
@@ -187,7 +188,7 @@
 					<dependency>
 						<groupId>org.pitest</groupId>
 						<artifactId>pitest-junit5-plugin</artifactId>
-						<version>1.1.0</version>
+						<version>${pitest.junit5.plugin.version}</version>
 					</dependency>
 				</dependencies>
 				<configuration>
